--- a/AboutStyle.css
+++ b/AboutStyle.css
@@ -39,8 +39,8 @@ body {
 	transition: all 0.1s linear;
 	position: relative;
 }
-.Menu-bar ul li .b_ef:hover{
-color: #eb6540;
+.Menu-bar ul li .b_ef:hover {
+	color: #eb6540;
 }
 
 .Menu-bar ul li .b_ef:after {
@@ -97,6 +97,12 @@ color: #eb6540;
 }
 
 /* ----Footer 1---- */
+hr{
+	margin-bottom: -2.5rem;
+	width: 100%;
+	border: #2b3467 solid 2px;
+	background-color: #2b3467;
+}
 .FOOT1 {
 	margin-top: 2.5rem;
 	padding: 3rem;
@@ -105,10 +111,9 @@ color: #eb6540;
 }
 .FOOT1 img {
 	width: 250px;
-	margin-left: -15px;
 }
 .FOOT1 p,
-a{
+a {
 	letter-spacing: 1px;
 	color: #eafdfcc8;
 	text-decoration: none;
@@ -116,11 +121,11 @@ a{
 	position: relative;
 	font-family: besdong;
 }
-.FOOT1 a:hover{
-color: #eb6540;
-background-color: #495579;
-border-radius: 18px;
-padding: 1px 5px 1px 5px;
+.FOOT1 a:hover {
+	color: #eb6540;
+	background-color: #495579;
+	border-radius: 18px;
+	padding: 1px 5px 1px 5px;
 }
 /* ----Footer 2---- */
 .FOOT2 {
@@ -132,7 +137,15 @@ padding: 1px 5px 1px 5px;
 }
 
 /* ----Responsive---- */
+@media (max-width: 870px) {
+	.text h1 {
+		font-size: 2rem;
+	}
+}
 @media (max-width: 600px) {
+	.text h1 {
+		font-size: 1.7rem;
+	}
 	ul {
 		list-style: none;
 		overflow: hidden;
@@ -147,5 +160,14 @@ padding: 1px 5px 1px 5px;
 	.dec h1 {
 		font-size: 1.5rem;
 		padding: 2rem;
+	}
+	.FOOT1 {
+		margin-top: .5;
+		padding: 1rem;
+		
+	}
+	.FOOT1 img {
+		width: 200px;
+		margin-left: 5px;
 	}
 }
